# insight-forge

backend/: README.md  pyproject.toml
backend/app/core/: config.py
backend/app/core/self_discover/: constant.py  self_discover.py
backend/app/core/storm/: chain.py  constant.py  graph.py  helper.py  llm.py  main.py  model.py  runnable.py  tool.py  util.py
