[tool.poetry]
name = "insight-forge"
version = "0.1.0"
description = "Automated Comprehensive Research Report Generator"
authors = ["abdullah <44318011+fx2y@users.noreply.github.com>"]
license = "BSL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { "extras" = ["standard"], version = "^0.30.6" }
fastapi = "^0.115.0"
langgraph = "^0.2.22"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langfuse = "^2.50.0"
wikipedia = "^1.4.0"
duckduckgo-search = "^6.2.12"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
